Changed to install image instead of building from Dockefile

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "dev",
-    "dockerFile": "../Dockerfile",
+    "image": "ghcr.io/norikenpi/mppi_playground:0.0.1",
     "settings": {
         "terminal.integrated.shell.linux": "/bin/bash"
     },
